@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11292] "dk/dbc/opensearch/common/metadata/DublinCoreTerms.java bliver tilsyneladende ikke brugt"
    - bug [11293] "DocbookAnnotate* kan slettes."
    - bug [11280] "DublinCore og DublinCoreElement skal flyttes ind i DocbookAnnotationEnvironment"
    - bug [11043] "ESHarvester bør frigive ikke-uførte jobs ved nedlukning af Datadock"
